--- a/05_Lesson/index.html
+++ b/05_Lesson/index.html
@@ -9,54 +9,68 @@
       <link rel="stylesheet" href="main.css" type="text/css">
    </head>
    <body>
-      <h1>Hello World</h1>
+      <h1>My Goals for the Year</h1>
 
       <hr>
 
-      <h2>I'm Ready to Learn HTML</h2>
-      <p>This is my fifth web page.</p>
-
-      <h3>My Daily Schedule</h3>
-      <p>Let me tell you how:</p>
-      <ol>
-	 <li>...I learn more about dev web.</li>
-	 <li>...I plan out my schedule.</li>
-	 <li>...I use resources from <abbr title="Mozilla Developer Network">
-	       <a href="https://developer.mozilla.org/">MDN</a>
-	    </abbr>.</li>
-      </ol>
+      <nav>
+	 <ul>
+	    <li><a href="#html">Learning HTML</a></li>
+	    <li><a href="#vacation">Planning a Vacation</a></li>
+	 </ul>
+      </nav>
 
       <hr>
 
-      <h2>I'm Also Planning a Vacation</h2>
-      <p>I've been working hard and <em>really need a getaway</em>.</p>
-      <p>I live in <abbr title="Kansas">KS</abbr> so I want visit a beach.</p>
+      <section id="html">
+	 <h2>I'm Ready to Learn HTML</h2>
+	 <p>This is my fifth web page.</p>
 
-      <!-- TODO: Add more places -->
-      <h3>Places I'd Like to Visit</h3>
-      <ul>
-	 <li><p>I've heard good things about the Caribbean.</p></li>
-	 <li><p>I've heard good things about going here:</p>
-	 <address>
-	    Margaritaville Island Reserve Riviera Cancún<br>
-	    Bahia Petempich Puerto Morelos, Mexico<br>
-	    Colonia Morelos, México 77580
-	 </address></li>
-      </ul>
+	 <h3>My Daily Schedule</h3>
+	 <p>Let me tell you how:</p>
+	 <ol>
+	    <li>...I learn more about dev web.</li>
+	    <li>...I plan out my schedule.</li>
+	    <li>...I use resources from <abbr title="Mozilla Developer Network">
+		  <a href="https://developer.mozilla.org/">MDN</a>
+	       </abbr>.</li>
+	 </ol>
+      </section>
 
-      <h3>Places I Want to Avoid</h3>
-      <dl>
-	 <dt>North Pole</dt>
-	 <dd>I hear this is <strong>cold</strong>!</dd>
+      <hr>
 
-	 <dt>South Pole</dt>
-	 <dd>This is also cold.</dd>
+      <section id="vacation">
+	 <h2>I'm Also Planning a Vacation</h2>
+	 <p>I've been working hard and <em>really need a getaway</em>.</p>
+	 <p>I live in <abbr title="Kansas">KS</abbr> so I want visit a beach.</p>
 
-	 <dt>Mountain Tops</dt>
-	 <dd>These are also cold.</dd>
-      </dl>
+	 <!-- TODO: Add more places -->
+	 <h3>Places I'd Like to Visit</h3>
+	 <ul>
+	    <li><p>I've heard good things about the Caribbean.</p></li>
+	    <li><p>I've heard good things about going here:</p>
+	    <address>
+	       Margaritaville Island Reserve Riviera Cancún<br>
+	       Bahia Petempich Puerto Morelos, Mexico<br>
+	       Colonia Morelos, México 77580
+	    </address></li>
+	 </ul>
+
+	 <h3>Places I Want to Avoid</h3>
+	 <dl>
+	    <dt>North Pole</dt>
+	    <dd>I hear this is <strong>cold</strong>!</dd>
+
+	    <dt>South Pole</dt>
+	    <dd>This is also cold.</dd>
+
+	    <dt>Mountain Tops</dt>
+	    <dd>These are also cold.</dd>
+	 </dl>
+      </section>
 
       <hr>
       &lt;&lt;&lt; &copy; <a href="about.html">Josue Madueño</a> &gt;&gt;&gt;
+      <p><a href="#">Back to Top</a></p>
    </body>
 </html>
