Fin de la lección 05, ya estoy agarrando práctica a la mecanografía

--- a/05_Lesson/myAbout.html
+++ b/05_Lesson/myAbout.html
@@ -35,5 +35,6 @@
       <p>I want to get so good at something computer-related that I can live a long and calm life, get married and spend time with my children, I don't need fancy things, but I want to give my future children and wife everything they want.</p>
       <hr>
       &lt;&lt;&lt; &copy; <a href="about.html">Josue Madueño</a> &gt;&gt;&gt;
+      <p><a href="/">Back to Home</a></p>
    </body>
 </html>
