--- a/05_Lesson/about.html
+++ b/05_Lesson/about.html
@@ -10,9 +10,22 @@
    </head>
    <body>
       <h1>Hi, I'm Josue Madueño</h1>
+
       <hr>
+
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, laborum. Eum iure, ea, corporis odit excepturi accusamus fugit blanditiis non ipsa, quae asperiores enim esse maiores ipsum illum? Incidunt, ducimus!</p>
+
+      <hr>
+
+      <ul>
+	 <li>Download an <a href="html5.png" download>HTML5 favicon</a>.</li>
+	 <li>Contact me at <a href="mailto:random@email.com">my email adress</a>.</li>
+	 <li>Dial <a href="tel:+1234567890">my phone number</a>.</li>
+	 <li>Open <a href="https://www.google.com/" target="_blank">Google</a> in a new tab.</li>
+      </ul>
+
       <hr>
       &lt;&lt;&lt; &copy; <a href="myAbout.html">Josue Madueño</a> &gt;&gt;&gt;
+      <p><a href="/">Back to Home</a></p>
    </body>
 </html>
