--- a/06_Lesson/index.html
+++ b/06_Lesson/index.html
@@ -26,6 +26,10 @@
 	 <h2>I'm Ready to Learn HTML</h2>
 	 <p>This is my sixth web page.</p>
 	 <img src="img/html_logo_300x300.png" alt="HTML5 Logo" title="I'm learning HTML5" width="300" height="300">
+	 <figure>
+	    <figcaption>An example of HTML5 code!</figcaption>
+	    <p><code>&lt;h1&gt;Hello World!&lt;/h1&gt;</code></p>
+	 </figure>
 
 	 <h3>My Daily Schedule</h3>
 	 <p>Let me tell you how:</p>
@@ -63,7 +67,7 @@
 		  Colonia Morelos, México 77580
 	       </address>
 	       <figure>
-		  <img src="img/vacation.jpg" alt="Cacun Vacation" title="It's 5 o'Clock Somewhere!" loading="lazy">
+		  <img src="img/vacation.jpg" alt="Cacun Vacation" title="It's 5 o'Clock Somewhere!" loading="lazy" width="400" height="267">
 		  <figcaption>A Caribbean Vacation Image</figcaption>
 	       </figure>
 	    </li>
